# babe

./: README.md  setup.cfg
babe/: __init__.py
docs/: analyzing US baby names.ipynb
name/: __init__.py
