[metadata]
name = babe
version = 0.0.2
url = https://github.com/thorwhalen/babe
packages = 
		name
		babe
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = Data access and analysis of baby names statistics
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

