[metadata]
name = babe
version = 0.0.6
url = https://github.com/thorwhalen/babe
packages = 
		babe
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = Data access and analysis of baby names statistics
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
	pandas
	py2store
	graze

